# mcp-test-harness

./: .gitignore  HOWTO.md  LICENSE  README.md  mcp-tool.html  pyproject.toml
examples/: github-actions.yml
mcp_test_harness/: __main__.py  cli.py  config.py  config_file.py
mcp_test_harness/client/: protocol.py  stdio_raw.py  stdio_sdk.py
mcp_test_harness/report/: collector.py  json_report.py  markdown_report.py  scoring.py  text_report.py
mcp_test_harness/suites/: base.py  capabilities.py  errors.py  initialization.py  injection.py  operational.py  path_traversal.py  resource_scope.py  tools.py  validation.py
tests/: conftest.py  test_config_file.py  test_initialization.py  test_injection_signal.py  test_integration.py  test_integration_phase4.py  test_markdown_report.py  test_phase2.py  test_raw_client.py  test_scoring.py  test_security.py  test_tools.py
tests/fixtures/: bad_server.py  good_server.py
